--- a/cms_tools/plugins/djangocms_gallery/templates/djangocms_gallery/gallery.html
+++ b/cms_tools/plugins/djangocms_gallery/templates/djangocms_gallery/gallery.html
@@ -1,15 +1,9 @@
 {% load cms_tags thumbnail %}
 
-{% if instance.image %}
-<div class="plugin plugin_image">
-    {% if instance.parent %}
-        {% thumbnail instance.image 700x900 crop=0 upscale=0 as resized %}
-    {% else %}
-        {% thumbnail instance.image 1200x1500 crop=0 upscale=0 as resized %}
-    {% endif %}
-    <img src="{{ resized.url }}"
-         width="{{ resized.width }}"
-         height="{{ resized.height }}"
-         alt="{{ instance.alt_text }}">
+{% if instance.child_plugin_instances|length %}
+<div class="plugin plugin_gallery">
+    {% for child_plugin in instance.child_plugin_instances %}
+        {% render_plugin child_plugin %}
+    {% endfor %}
 </div>
 {% endif %}
