more enhance gulpfile

--- a/djangocms_misc/admin_style/static/djangocms_misc/admin/sass/admin_style.sass
+++ b/djangocms_misc/admin_style/static/djangocms_misc/admin/sass/admin_style.sass
@@ -6,10 +6,11 @@ $left_padding: 20px
 $after_field_padding: 18px
 
 
-// soft version!
+// ugly fix for calendar widget in modals
 .djangocms-admin-style div.calendarbox
     margin-left: -247px
     margin-top: -1px
+
 
 .djangocms-admin-style
     #content
@@ -37,8 +38,7 @@ $after_field_padding: 18px
                     margin: 0 25px
                 .form-row
                     padding: 0 5px 22px
-
-    // no margin in popup
+    // no margin in popup ?
     &.popup #content
         // margin: 0 !important
 
