--- a/djangocms_misc/admin_style/templates/admin/inc/extrastyle.html
+++ b/djangocms_misc/admin_style/templates/admin/inc/extrastyle.html
@@ -1,1 +1,1 @@
-<link href="{{ STATIC_URL }}djangocms_misc/admin/css/admin_style.css" media="all" rel="stylesheet">
+<link href="{% static 'djangocms_misc/admin/css/admin_style.css' %}" media="all" rel="stylesheet">
