working draft for untranslated placeholders. not sure how to monkey patch, though. tests not yet working

--- a/djangocms_misc/tests/test_app/templates/base.html
+++ b/djangocms_misc/tests/test_app/templates/base.html
@@ -17,6 +17,7 @@ page_link to home, link text "link text HOME":
 page_link to home, custom class "button": {% djangocms_misc_page_link "home" "button" %}<br>
 
 {% placeholder 'testing_test_yea' %}
+{% placeholder 'untranslated_placeholder' %}
 
 {% render_block 'js' %}
 
