--- a/djangocms_misc/tests/test_app/templates/base.html
+++ b/djangocms_misc/tests/test_app/templates/base.html
@@ -35,6 +35,8 @@
     {% placeholder 'testing_test_yea' %}
     <h3>Untranslated</h3>
     {% placeholder 'untranslated_placeholder' %}
+    <h3>Editmode Fallback</h3>
+    {% placeholder 'editmode_fallback_placeholder' %}
 </div>
 
 {% render_block 'js' %}
