--- a/djangocms_misc/tests/test_app/templates/base.html
+++ b/djangocms_misc/tests/test_app/templates/base.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 
+<link rel="stylesheet" media="screen" href="{{ STATIC_URL }}autopublisher/css/autopublisher.css">
 <link rel="stylesheet" media="screen" href="{{ STATIC_URL }}djangocms_misc/css/cms_frontend_adjust.css">
 
 {% cms_toolbar %}
