global untranslated placeholders

--- a/djangocms_misc/tests/test_app/templates/base.html
+++ b/djangocms_misc/tests/test_app/templates/base.html
@@ -32,8 +32,8 @@
 
 <div>
     <h2>Placeholders</h2>
-    <h3>Translated</h3>
-    {% placeholder 'testing_test_yea' %}
+    <h3>Translated (default)</h3>
+    {% placeholder 'translated_placeholder' %}
     <h3>Untranslated</h3>
     {% placeholder 'untranslated_placeholder' %}
     <h3>Editmode Fallback</h3>
