--- a/djangocms_misc/basic/static/djangocms_misc/sass/cms_frontend_adjust.sass
+++ b/djangocms_misc/basic/static/djangocms_misc/sass/cms_frontend_adjust.sass
@@ -13,3 +13,7 @@
 div.cms .cms-structure,
 #cms_toolbar .cms_structure .cms_structure-dimmer
     background: rgba(240, 240, 240, 0.96) !important
+
+
+.cms-modal-head .cms-modal-title-suffix
+    display: none
