--- a/djangocms_misc/basic/static/djangocms_misc/css/cms_frontend_adjust.css
+++ b/djangocms_misc/basic/static/djangocms_misc/css/cms_frontend_adjust.css
@@ -5,3 +5,6 @@
 div.cms .cms-structure,
 #cms_toolbar .cms_structure .cms_structure-dimmer {
   background: rgba(240, 240, 240, 0.96) !important; }
+
+.cms-modal-head .cms-modal-title-suffix {
+  display: none; }
