--- a/djangocms_misc/admin_style/static/admin/djangocms_misc/css/admin_style.css
+++ b/djangocms_misc/admin_style/static/admin/djangocms_misc/css/admin_style.css
@@ -20,6 +20,7 @@
   padding-bottom: 0.3em; }
   .djangocms-admin-style #content form fieldset > h2, .djangocms-admin-style #content form .inline-group > h2 {
     padding: 1em 0 0.75em 0;
+    box-sizing: border-box;
     margin-bottom: 0.75em;
     font-size: 21px !important;
     font-weight: bold;
@@ -33,6 +34,8 @@
 
 .djangocms-admin-style #content form .inline-group .form-row {
   padding: 0 0 1.2em; }
+  .djangocms-admin-style #content form .inline-group .form-row input[type="text"] {
+    width: 100% !important; }
 
 .djangocms-admin-style #content form .inline-group .add-row {
   padding: 0.8em;
