--- a/djangocms_misc/tests/test_app/templates/base.html
+++ b/djangocms_misc/tests/test_app/templates/base.html
@@ -29,7 +29,7 @@
         page_link to home, link text "link text HOME":
         {% djangocms_misc_page_link "home" "" "link text HOME" %}<br>
         page_link to home, custom class "button": {% djangocms_misc_page_link "home" "button" %}<br>
-        page_link to home, using link_text_attr='menu_title' "button": {% djangocms_misc_page_link "home" link_text_attr='menu_title' %}<br>
+        page_link to home, using link_text_attr='menu_title' (not yet working): {% djangocms_misc_page_link "home" link_text_attr='menu_title' %}<br>
         <br>
         get from page content (untranslated placeholder > text > testplugin > field1): {% djangocms_misc_get_from_page_content request.current_page 'text' %}
     </p>
