no 100% for date and time widgets

--- a/djangocms_misc/admin_style/static/admin/djangocms_misc/sass/admin_style.sass
+++ b/djangocms_misc/admin_style/static/admin/djangocms_misc/sass/admin_style.sass
@@ -56,7 +56,7 @@ $color_grey: #d3d3d3
                     // the row
                     // width: 100%
                     padding: 0 0 $after_field_padding
-                    input[type="text"]
+                    input[type="text"]:not(.vDateField, .vTimeField)
                         width: 100% !important
                 .add-row
                     padding: 0.8em
