--- a/djangocms_misc/admin_style/static/admin/djangocms_misc/sass/admin_style.sass
+++ b/djangocms_misc/admin_style/static/admin/djangocms_misc/sass/admin_style.sass
@@ -56,8 +56,9 @@ $color_grey: #d3d3d3
                     // the row
                     // width: 100%
                     padding: 0 0 $after_field_padding
-                    input[type="text"]:not(.vDateField, .vTimeField)
-                        width: 100% !important
+                    input[type="text"]
+                        &:not(.vDateField), &:not(.vTimeField)
+                            width: 100% !important
                 .add-row
                     padding: 0.8em
                     padding-left: 8px
