:not() itself, another story

--- a/djangocms_misc/admin_style/static/admin/djangocms_misc/sass/admin_style.sass
+++ b/djangocms_misc/admin_style/static/admin/djangocms_misc/sass/admin_style.sass
@@ -57,7 +57,7 @@ $color_grey: #d3d3d3
                     // width: 100%
                     padding: 0 0 $after_field_padding
                     input[type="text"]
-                        &:not(.vDateField), &:not(.vTimeField)
+                        &:not(.vDateField):not(.vTimeField)
                             width: 100% !important
                 .add-row
                     padding: 0.8em
