some more tests, and static placeholders autopublish

--- a/djangocms_misc/tests/test_app/templates/base.html
+++ b/djangocms_misc/tests/test_app/templates/base.html
@@ -43,6 +43,8 @@
     {% placeholder 'untranslated_placeholder' %}
     <h3>Editmode Fallback</h3>
     {% placeholder 'editmode_fallback_placeholder' %}
+    <h3>Static Placeholder</h3>
+    {% static_placeholder 'static_placeholder' %}
 </div>
 
 {% render_block 'js' %}
