--- a/djangocms_misc/tests/test_app/templates/base.html
+++ b/djangocms_misc/tests/test_app/templates/base.html
@@ -38,7 +38,13 @@
         {% djangocms_misc_page_link "home" link_text_attr='menu_title' %}<br>
         <br>
         get from page content (untranslated placeholder > text > testplugin > field1):
-        {% djangocms_misc_get_from_page_content request.current_page 'text' %}
+        no page: {% djangocms_misc_get_from_page_content 'text' %}
+        <br>
+        request.current_page{% djangocms_misc_get_from_page_content 'text' request.current_page %}
+        <br>
+        current_page.id: {% djangocms_misc_get_from_page_content 'text' request.current_page.id %}
+        <br>
+        current_page.reverse_id: {% djangocms_misc_get_from_page_content 'text' request.current_page.reverse_id %}
     </p>
 </div>
 
