--- a/djangocms_misc/admin_style/static/admin/djangocms_misc/sass/admin_style.sass
+++ b/djangocms_misc/admin_style/static/admin/djangocms_misc/sass/admin_style.sass
@@ -43,15 +43,26 @@ $color_grey: #d3d3d3
                     margin-bottom: 0.75em
                     font-size: $title_font_size !important
                     font-weight: bold
-                    border-bottom: 2px solid #d3d3d3
+                    border-bottom: 3px solid #d3d3d3
             .inline-group
                 .inline-related
+                    margin: 0
+                    box-shadow: none
+                    fieldset
+                        padding: 0 !important
+                        // padding-left: 30px !important
                     h3
+                        background-color: transparent
                         // inline title (has border!)
-                        padding-top: 0.5em
-                        margin-bottom: 0.5em
+                        border-top: 1px solid $color_grey
+                        margin: 0
+                        padding: 0
+                        padding-top: 10px
                         b
+                            display: none
                             font-weight: bold
+                        .inline_label
+                            display: none
                 .form-row
                     // the row
                     // width: 100%
