--- a/djangocms_misc/admin_style/static/admin/djangocms_misc/sass/admin_style.sass
+++ b/djangocms_misc/admin_style/static/admin/djangocms_misc/sass/admin_style.sass
@@ -49,7 +49,7 @@ $color_grey: #d3d3d3
                     margin: 0
                     box-shadow: none
                     fieldset
-                        padding: 0 !important
+                        padding: 0 0 0 10px !important
                         // padding-left: 30px !important
                     h3
                         background-color: transparent
