fixing somehow date and time issues

--- a/djangocms_misc/admin_style/static/admin/djangocms_misc/css/admin_style.css
+++ b/djangocms_misc/admin_style/static/admin/djangocms_misc/css/admin_style.css
@@ -2,8 +2,13 @@
   margin-left: -247px;
   margin-top: -1px; }
 
-form input.vDateField, form input.vTimeField {
-  width: calc(100% - 222px) !important; }
+.djangocms-admin-style div.clockbox {
+  margin-left: -147px;
+  margin-top: -7px; }
+
+.djangocms-admin-style form input.vDateField, .djangocms-admin-style form input.vTimeField {
+  width: calc(100% - 222px) !important;
+  max-width: 200px !important; }
 
 .djangocms-admin-style #content h1 {
   font-size: 21px !important; }
