--- a/djangocms_misc/basic/app_template/templates/app/app_detail.html
+++ b/djangocms_misc/basic/app_template/templates/app/app_detail.html
@@ -1,27 +1,26 @@
-{% extends "djangocms_baseplugins/baseplugin.html" %}
+{% extends "base.html" %}
 {% load cms_tags %}
 
 
-{% block plugin_content %}
+{% block page_title %}{{ object.get_seo_title }} | {{ object.date }}{% endblock %}
+{% block meta_description %}{{ object.meta_description }}{% endblock %}
 
-    <section {{ object.html_wrapper_attributes }}>
 
-        {% block plugin_inner_content %}
-            {% block plugin_title %}
-                {% if object.title %}<h2>{{ object.title }}</h2>{% endif %}
-            {% endblock %}
-        {% endblock %}
+{% block more_menu %}
+    <a class="nav-button nav-button_back" href="javascript:history.back();">zurück</a>
+{% endblock %}
 
-        {% block plugin_children %}
-            {% if object.child_plugin_instances|length %}
-                <div class="plugin-children">
-                    {% for plugin in object.child_plugin_instances %}
-                        {% render_plugin plugin %}
-                    {% endfor %}
-                </div>
-            {% endif %}
-        {% endblock %}
 
-    </section>
-
+{% block content %}
+    <div class="article-detail">
+        <div class="text">
+            {% render_model_block object %}
+                <h1>
+                    {{ object.title }}
+                    <span>{{ object.date }}</span>
+                </h1>
+            {% endrender_model_block %}
+            {% render_placeholder object.content %}
+        </div>
+    </div>
 {% endblock %}
