list template update

--- a/djangocms_misc/basic/app_template/templates/app/app_list.html
+++ b/djangocms_misc/basic/app_template/templates/app/app_list.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load cms_tags easy_thumbnails quadrat_tags %}
+{% load cms_tags thumbnail %}
 
 
 {#{% block plugin_content %}#}
