some app template enhancements

--- a/djangocms_misc/basic/app_template/templates/app/app_list.html
+++ b/djangocms_misc/basic/app_template/templates/app/app_list.html
@@ -15,7 +15,7 @@
     </div>
     {% endif %}
 
-    <div class="article-list">
+    <div class="apptemplate-list">
         {% for object in object_list %}
             {% render_model_block object %}
                 <a href="{{ object.get_absolute_url }}" class="article-item">
