up to date again, added githuba actions

--- a/djangocms_misc/admin_style/templates/admin/inc/extrastyle.html
+++ b/djangocms_misc/admin_style/templates/admin/inc/extrastyle.html
@@ -1,2 +1,2 @@
-{% load static from staticfiles %}
+{% load static %}
 <link href="{% static 'admin/djangocms_misc/css/admin_style.css' %}" media="all" rel="stylesheet">
