--- a/djangocms_misc/basic/templates/admin/djangocms_misc/modeltranslation_lang_tabs_change_form.html
+++ b/djangocms_misc/basic/templates/admin/djangocms_misc/modeltranslation_lang_tabs_change_form.html
@@ -1,5 +1,7 @@
 {% extends 'admin/change_form.html' %}
-{% load i18n admin_static admin_modify cms_admin %}
+{% load i18n static admin_modify cms_admin %}
+
+
 {% block extrahead %}{{ block.super }}
 <script src="{% static 'admin/djangocms_misc/js/language_tabs.js' %}" type="text/javascript"></script>
 <link href="{% static 'admin/djangocms_misc/css/language_tabs.css' %}" rel="stylesheet" type="text/css">
