hide change-form h2 title in django 3.2

--- a/djangocms_misc/admin_style/static/admin/djangocms_misc/sass/admin_style.sass
+++ b/djangocms_misc/admin_style/static/admin/djangocms_misc/sass/admin_style.sass
@@ -17,6 +17,11 @@ $color_grey: #d3d3d3
         margin-left: -147px
         margin-top: -7px
 
+// hide special change form title
+.change-form
+    .content > h2, #content > h2
+        display: none
+
 
 // another ugly fix: it gets too wide otherwise, on smaller screens
 .djangocms-admin-style
