--- a/djangocms_misc/admin_style/static/admin/djangocms_misc/css/admin_style.css
+++ b/djangocms_misc/admin_style/static/admin/djangocms_misc/css/admin_style.css
@@ -6,6 +6,9 @@
   margin-left: -147px;
   margin-top: -7px; }
 
+.change-form .content > h2, .change-form #content > h2 {
+  display: none; }
+
 .djangocms-admin-style form input.vDateField, .djangocms-admin-style form input.vTimeField {
   width: calc(100% - 222px) !important;
   max-width: 200px !important; }
